--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
-    <canvas id="gameWorld" tabindex="1" width="800" height="600" style="background-image:url(/Users/Cuong_Tran/Desktop/TCSS491/workspace/Homework1/img/bg.jpg"></canvas>
+    <canvas id="gameWorld" tabindex="1" width="800" height="600" style="background-image:url(img/bg.jpg"></canvas>
 	 <div class="relative">
      <p class="absolute-text"><a>Cuong Tran - Assignment 1</a> </p>
      <p class="absolute-text"><a>Press Space to Jump</a> </p>
